fix: styles on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,7 +78,7 @@
   }
 
   .waves {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
